[project]
name = "python-ai-agent"
version = "0.1.0"
requires-python = ">= 3.13.12"
dependencies = [
    "ddgs>=9.13.0",
    "dotenv>=0.9.9",
    "fredapi>=0.5.2",
    "langchain>=1.2.15",
    "langchain-groq>=1.1.2",
    "langchain-ollama>=1.1.0",
    "langchain-xai>=1.2.2",
    "yfinance>=1.2.1",
]
